vlib/v/checker/tests/struct_ref_fields_uninitialized_err_b.vv
struct Viewport {
mut:
	parent &Window
}

pub struct Window {
mut:
	desktop_viewport ?&Viewport = none
	phone_viewport   ?&Viewport = none
}

fn main() {
	_ := &Window{}
}
